deploy/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nrs-api
  labels:
    app: nrs
    component: api
spec:
  selector:
    app: nrs
    component: api
  ports:
    - name: http
      port: 8080
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: nrs-spa
  labels:
    app: nrs
    component: spa
spec:
  selector:
    app: nrs
    component: spa
  ports:
    - name: http
      port: 8080
      targetPort: http
